# jejeje

./: AGENT.md  Cargo.toml  Justfile  README.en.md  README.md  release.toml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  error.rs  main.rs  meta.rs
src/commands/: add.rs  config.rs  contest.rs  contests.rs  download.rs  info.rs  mod.rs  new.rs  prepare.rs  tasks.rs  test.rs
src/judge/: aoj.rs  atcoder.rs  codeforces.rs  mod.rs  model.rs  yukicoder.rs
tests/: integration_contests.rs  integration_prepare.rs
