[package]
name = "jejeje"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "je"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# 非同期ランタイム
tokio = { version = "1", features = ["full"] }

# HTTP クライアント
reqwest = { version = "0.12", features = ["json", "cookies"] }

# HTML パーサー
scraper = "0.22"

# シリアライズ（JSON / TOML 共通）
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"

# エラーハンドリング
anyhow    = "1"
thiserror = "2"

# OS 標準ディレクトリ
directories = "6"

# ターミナル色付け
owo-colors = { version = "4", features = ["supports-colors"] }

[dev-dependencies]
# 一時ディレクトリ生成（ファイルシステムテスト用）
tempfile = "3"
# CLI バイナリの統合テスト用
assert_cmd = "2"
predicates = "3.1.4"
